--- a/MasterDetailWithLogin/water.html
+++ b/MasterDetailWithLogin/water.html
@@ -242,9 +242,192 @@
                     });
 
             chart4.render();
+
+            $("#chart4").change(function(){
+                var id = $(this).find("option:selected").attr("id");
+                                //alert("id"+id);
+                switch(id) {
+                    case "2011":
+                        {
+                                var chart4 = new CanvasJS.Chart("chartContainer4",
+                                                                {
+                                                                title:{
+                                                                text: "2011, Water Discharge"
+                                                                //fontFamily: "Impact",
+                                                                //fontWeight: "normal"
+                                                                },
+                                                                animationEnabled: true,
+                                                                legend:{
+                                                                verticalAlign: "bottom",
+                                                                horizontalAlign: "center",
+                                                                fontSize: 15,
+                                                                fontFamily: "helvetica",
+                                                                fontStyle: "normal",
+                                                                fontColor: "Sienna"
+                                                                },
+                                                                data: [
+                                                                       {
+                                                                       indexLabelFontSize: 14,
+                                                                       indexLabelFontFamily: "Garamond",
+                                                                       indexLabelFontColor: "",
+                                                                       indexLabelLineColor: "darkgrey",
+                                                                       indexLabelPlacement: "outside",
+                                                                       type: "doughnut",
+                                                                       showInLegend: true,
+                                                                       legendMarkerType: "square",
+                                                                       dataPoints: [
+                                                                                    {  y: 15, legendText:"Discharge to Surface Water", indexLabel: "Discharge to Surface Water" },
+                                                                                    {  y: 25, legendText:"Sent to Third Party", indexLabel: "Sent to Third Party" },
+                                                                                    {  y: 60, legendText:"Municipal Discharge (POTW)", indexLabel: "Municipal Discharge (POTW)" }
+                                                                                    ]
+                                                                       }
+                                                                       ]
+                                                                });
+                                
+                                chart4.render();
+                        }
+                        break;
+                    case "2012":
+                    {
+                        var chart4 = new CanvasJS.Chart("chartContainer4",
+                                {
+                                    title:{
+                                        text: "2012, Water Discharge"
+                                        //fontFamily: "Impact",
+                                        //fontWeight: "normal"
+                                    },
+                                    animationEnabled: true,
+                                    legend:{
+                                        verticalAlign: "bottom",
+                                        horizontalAlign: "center",
+                                        fontSize: 15,
+                                        fontFamily: "helvetica",
+                                        fontStyle: "normal",
+                                        fontColor: "Sienna"
+                                    },
+                                    data: [
+                                        {
+                                            indexLabelFontSize: 14,
+                                            indexLabelFontFamily: "Garamond",
+                                            indexLabelFontColor: "",
+                                            indexLabelLineColor: "darkgrey",
+                                            indexLabelPlacement: "outside",
+                                            type: "doughnut",
+                                            showInLegend: true,
+                                            legendMarkerType: "square",
+                                            dataPoints: [
+                                                {  y: 25, legendText:"Discharge to Surface Water", indexLabel: "Discharge to Surface Water" },
+                                                {  y: 21, legendText:"Sent to Third Party", indexLabel: "Sent to Third Party" },
+                                                {  y: 54, legendText:"Municipal Discharge (POTW)", indexLabel: "Municipal Discharge (POTW)" }
+                                            ]
+                                        }
+                                    ]
+                                });
+
+                        chart4.render();
+                    }
+                        break;
+                    case "2013":
+                    {
+                        var chart4 = new CanvasJS.Chart("chartContainer4", {
+                            title: {
+                                text: "2013, Water Discharge"
+                                //fontFamily: "Impact",
+                                //fontWeight: "normal"
+                            },
+                            animationEnabled: true,
+                            legend: {
+                                verticalAlign: "bottom",
+                                horizontalAlign: "center",
+                                fontSize: 15,
+                                fontFamily: "helvetica",
+                                fontStyle: "normal",
+                                fontColor: "Sienna"
+                            },
+                            data: [
+                                {
+                                    indexLabelFontSize: 14,
+                                    indexLabelFontFamily: "Garamond",
+                                    indexLabelFontColor: "",
+                                    indexLabelLineColor: "darkgrey",
+                                    indexLabelPlacement: "outside",
+                                    type: "doughnut",
+                                    showInLegend: true,
+                                    legendMarkerType: "square",
+                                    dataPoints: [
+                                        {
+                                            y: 14,
+                                            legendText: "Discharge to Surface Water",
+                                            indexLabel: "Discharge to Surface Water"
+                                        },
+                                        {y: 26, legendText: "Sent to Third Party", indexLabel: "Sent to Third Party"},
+                                        {
+                                            y: 60,
+                                            legendText: "Municipal Discharge (POTW)",
+                                            indexLabel: "Municipal Discharge (POTW)"
+                                        }
+                                    ]
+                                }
+                            ]
+                        });
+
+                        chart4.render();
+                    }
+                        break;
+                    case "2014":
+                    {
+                        var chart4 = new CanvasJS.Chart("chartContainer4", {
+                            title: {
+                                text: "2014, Water Discharge"
+                                //fontFamily: "Impact",
+                                //fontWeight: "normal"
+                            },
+                            animationEnabled: true,
+                            legend: {
+                                verticalAlign: "bottom",
+                                horizontalAlign: "center",
+                                fontSize: 15,
+                                fontFamily: "helvetica",
+                                fontStyle: "normal",
+                                fontColor: "Sienna"
+                            },
+                            data: [
+                                {
+                                    indexLabelFontSize: 14,
+                                    indexLabelFontFamily: "Garamond",
+                                    indexLabelFontColor: "",
+                                    indexLabelLineColor: "darkgrey",
+                                    indexLabelPlacement: "outside",
+                                    type: "doughnut",
+                                    showInLegend: true,
+                                    legendMarkerType: "square",
+                                    dataPoints: [
+                                        {
+                                            y: 14,
+                                            legendText: "Discharge to Surface Water",
+                                            indexLabel: "Discharge to Surface Water"
+                                        },
+                                        {y: 26, legendText: "Sent to Third Party", indexLabel: "Sent to Third Party"},
+                                        {
+                                            y: 60,
+                                            legendText: "Municipal Discharge (POTW)",
+                                            indexLabel: "Municipal Discharge (POTW)"
+                                        }
+                                    ]
+                                }
+                            ]
+                        });
+
+                        chart4.render();
+                        break;
+                    }
+                }
+                                
+            });
         }
     </script>
     <script type="text/javascript" src="canvasjs.min.js"></script></head>
+<script type="text/javascript" src="jquery-2.1.3.min.js"></script></head>
 <body>
 <div id="chartContainer" style="height: 300px; width: 100%; border: 2px solid #a1a1a1;border-radius: 0px;">
 
@@ -254,13 +437,31 @@
 
 </div>
 
-<div id="chartContainer4" style="height: 300px; width: 49%; float:left;border: 2px solid #a1a1a1;border-radius: 0px;">
+
+
+<div style="height: 330px; width: 100%; float:left;border: 2px solid #a1a1a1;border-radius: 0px;">
+   <label for="type"> Years</label> <select name='type' id='chart4'>
+        <option value="2011" id="2011">2011</option>
+        <option value="2012" id="2012">2012</option>
+        <option value="2013" id="2013">2013</option>
+        <option value="2014" id="2014">2014</option>
+    </select>
+
+<div id="chartContainer4" style="height: 300px; width: 100%; float:right;border: 2px solid #a1a1a1;border-radius: 0px;">
 
 </div>
-<div id="chartContainer3" style="height: 300px; width: 49%; float:right;border: 2px solid #a1a1a1;border-radius: 0px;">
-
 </div>
+<div style="height: 330px; width: 100%; float:left;border: 2px solid #a1a1a1;border-radius: 0px;">
+     <select>
+        <option value="2011">2011</option>
+        <option value="2012">2012</option>
+        <option value="2013">2013</option>
+        <option value="2014">2014</option>
+    </select>
 
+<div id="chartContainer3" style="height: 300px; width: 100%; float:left;border: 2px solid #a1a1a1;border-radius: 0px;">
+</div>
+</div>
 
 
 </body>
