--- a/MasterDetailWithLogin/energy.html
+++ b/MasterDetailWithLogin/energy.html
@@ -104,6 +104,7 @@
                             fontColor: "Sienna"
                         },
                         animationEnabled: true,
+                        zoomEnabled:true,
                         data: [
                             {
                                 type: "line",
@@ -176,6 +177,7 @@
 //                            fontWeight: "normal"
                         },
                         animationEnabled: true,
+                        zoomEnabled:true,
                         legend:{
                             verticalAlign: "bottom",
                             horizontalAlign: "center",
