New Changes incorporation

--- a/MasterDetailWithLogin/energy.html
+++ b/MasterDetailWithLogin/energy.html
@@ -175,7 +175,7 @@
                             title: "Years"
                         },
                         axisY: {
-                            title: "E (Electric Intensity Q)"
+                            title: "Electric Intensity Q"
                         },
                         legend: {
                             verticalAlign: "bottom",
@@ -261,8 +261,8 @@
                         animationEnabled: true,
                         zoomEnabled:true,
                         legend:{
-                            verticalAlign: "bottom",
-                            horizontalAlign: "center",
+                            verticalAlign: "center",
+                            horizontalAlign: "right",
                             fontSize: 15,
                             fontFamily: "helvetica",
                             fontStyle: "normal",
@@ -307,8 +307,8 @@
                                     animationEnabled: true,
                                     zoomEnabled:true,
                                     legend:{
-                                        verticalAlign: "bottom",
-                                        horizontalAlign: "center",
+                                        verticalAlign: "center",
+                                        horizontalAlign: "right",
                                         fontSize: 15,
                                         fontFamily: "helvetica",
                                         fontStyle: "normal",
@@ -351,8 +351,8 @@
                                     animationEnabled: true,
                                     zoomEnabled:true,
                                     legend:{
-                                        verticalAlign: "bottom",
-                                        horizontalAlign: "center",
+                                        verticalAlign: "center",
+                                        horizontalAlign: "right",
                                         fontSize: 15,
                                         fontFamily: "helvetica",
                                         fontStyle: "normal",
@@ -396,8 +396,8 @@
                                     animationEnabled: true,
                                     zoomEnabled:true,
                                     legend:{
-                                        verticalAlign: "bottom",
-                                        horizontalAlign: "center",
+                                        verticalAlign: "center",
+                                        horizontalAlign: "right",
                                         fontSize: 15,
                                         fontFamily: "helvetica",
                                         fontStyle: "normal",
@@ -441,8 +441,8 @@
                                     animationEnabled: true,
                                     zoomEnabled:true,
                                     legend:{
-                                        verticalAlign: "bottom",
-                                        horizontalAlign: "center",
+                                        verticalAlign: "center",
+                                        horizontalAlign: "right",
                                         fontSize: 15,
                                         fontFamily: "helvetica",
                                         fontStyle: "normal",
@@ -487,8 +487,8 @@
                                         title: "MWH"
                                     },
                                     legend: {
-                                        verticalAlign: "bottom",
-                                        horizontalAlign: "center",
+                                        verticalAlign: "center",
+                                        horizontalAlign: "right",
                                         fontSize: 15,
                                         fontFamily: "helvetica",
                                         fontStyle: "normal",
@@ -571,8 +571,8 @@
                                         title: "MWH"
                                     },
                                     legend: {
-                                        verticalAlign: "bottom",
-                                        horizontalAlign: "center",
+                                        verticalAlign: "center",
+                                        horizontalAlign: "right",
                                         fontSize: 15,
                                         fontFamily: "helvetica",
                                         fontStyle: "normal",
@@ -655,8 +655,8 @@
                                         title: "MWH"
                                     },
                                     legend: {
-                                        verticalAlign: "bottom",
-                                        horizontalAlign: "center",
+                                        verticalAlign: "center",
+                                        horizontalAlign: "right",
                                         fontSize: 15,
                                         fontFamily: "helvetica",
                                         fontStyle: "normal",
