--- a/MasterDetailWithLogin/incidents.html
+++ b/MasterDetailWithLogin/incidents.html
@@ -4,7 +4,48 @@
 
 
         <script type="text/javascript">
+
             window.onload = function () {
+                var c = document.getElementById("geographic");
+                var ctx = c.getContext("2d");
+                var centerX = c.width / 2+14;
+                var centerY = c.height / 2-39;
+                ctx.beginPath();
+                ctx.arc(centerX,centerY,2,0,2*Math.PI,false);
+                ctx.fillStyle = 'E62E00';
+                ctx.fill();
+                //ctx.closePath();
+                //ctx.lineWidth = 1;
+                ctx.strokeStyle = '#E62E00';
+                ctx.stroke();
+
+                ctx.beginPath();
+                ctx.arc(centerX,centerY,4, 0, Math.PI*2, false);
+                ctx.closePath();
+                ctx.strokeStyle = "E62E00";
+                ctx.stroke();
+
+                function intersects(x, y, cx, cy, r) {
+//                   alert("cx"+x);
+//                   alert("cy"+y);
+//                   alert("cx"+cx);
+//                   alert("cy"+cy);
+                    var dx = x-cx
+                    var dy = y-cy
+//                  alert("dx"+dx*dx+' '+dy*dy+' '+' '+r*r);
+                    return (dx*dx+dy*dy <= r*r)
+                }
+
+                $("#geographic").on("click", function (e){
+                    if(intersects(e.pageX, e.pageY, 538,90, 16))
+                    {
+//                        alert("show");
+                                    submitButton('show');
+                    }else{
+//                        alert("not show");
+                    }
+                });
+
                 var chart = new CanvasJS.Chart("chartContainer",
                                                {
                                                title:{
@@ -17,8 +58,10 @@
                                                title: "Incidents"
                                                },
                                                legend: {
-                                               verticalAlign: "bottom",
-                                               horizontalAlign: "center"
+                                               //verticalAlign: "bottom",
+                                               //horizontalAlign: "center",
+                                               horizontalAlign: "right", // left, center ,right
+                                               verticalAlign: "center",  // top, center, bottom
                                                },
                                                zoomEnabled:true,
                                                animationEnabled: true,
@@ -27,8 +70,8 @@
                                                       type: "column",
                                                       showInLegend: true,
                                                       legendMarkerType: "square",
-                                                      legendText: "RPN < 5",
-                                                      name: "RPN < 5",
+                                                      legendText: "RPN - 9 to 30(Needs attention)",
+                                                      name: "RPN - 9 to 30",
                                                       dataPoints: [
                                                                    { label: "JAN",y: 3},
                                                                    { label: "FEB",y: 4},
@@ -48,9 +91,9 @@
                                                       type: "column",
                                                       showInLegend: true,
                                                       legendMarkerType: "square",
-                                                      legendText: "RPN < 6",
+                                                      legendText: "RPN - 31 to 64(Major)",
                                                       type: "column",
-                                                      name: "RPN < 6",
+                                                      name: "RPN - 31 to 64",
                                                       dataPoints: [
                                                                    { label: "JAN",y: 2},
                                                                    { label: "FEB",y: 5},
@@ -70,20 +113,41 @@
                                                       type: "column",
                                                       showInLegend: true,
                                                       legendMarkerType: "square",
-                                                      legendText: "RPN < 7",
-                                                      name: "RPN < 7",
+                                                      legendText: "RPN - 65 to 100 (Severe)",
+                                                      name: "RPN - 65 to 100",
                                                       dataPoints: [
                                                                    { label: "JAN",y: 3},
                                                                    { label: "FEB",y: 1},
                                                                    { label: "MAR",y: 2},
-                                                                   { label: "APR",y: 6},
-                                                                   { label: "MAY",y: 5},
-                                                                   { label: "JUN",y: 3},
-                                                                   { label: "JUL",y: 2},
+                                                                   { label: "APR",y: 3},
+                                                                   { label: "MAY",y: 3},
+                                                                   { label: "JUN",y: 1},
+                                                                   { label: "JUL",y: 3},
                                                                    { label: "AUG",y: 4},
-                                                                   { label: "SEP",y: 7},
-                                                                   { label: "OCT",y: 2},
-                                                                   { label: "NOV",y: 3},
+                                                                   { label: "SEP",y: 2},
+                                                                   { label: "OCT",y: 1},
+                                                                   { label: "NOV",y: 4},
+                                                                   { label: "DEC",y: 3}
+                                                                   ]
+                                                      },
+                                                      {
+                                                      type: "column",
+                                                      showInLegend: true,
+                                                      legendMarkerType: "square",
+                                                      legendText: "RPN > 100 (Highly Severe)",
+                                                      name: "RPN > 100",
+                                                      dataPoints: [
+                                                                   { label: "JAN",y: 2},
+                                                                   { label: "FEB",y: 1},
+                                                                   { label: "MAR",y: 2},
+                                                                   { label: "APR",y: 3},
+                                                                   { label: "MAY",y: 1},
+                                                                   { label: "JUN",y: 1},
+                                                                   { label: "JUL",y: 2},
+                                                                   { label: "AUG",y: 1},
+                                                                   { label: "SEP",y: 2},
+                                                                   { label: "OCT",y: 1},
+                                                                   { label: "NOV",y: 1},
                                                                    { label: "DEC",y: 2}
                                                                    ]
                                                       },
@@ -106,8 +170,8 @@ var chart1 = new CanvasJS.Chart("chartContainer1",
                                        title: "Cost ($ USD)"
                                    },
                                 legend: {
-                                    verticalAlign: "bottom",
-                                    horizontalAlign: "center"
+                                horizontalAlign: "right", // left, center ,right
+                                verticalAlign: "center",  // top, center, bottom
                                 },
                                 zoomEnabled: true,
                                 animationEnabled: true,
@@ -173,6 +237,7 @@ var chart1 = new CanvasJS.Chart("chartContainer1",
                             title:{
                                 text: "Plant EHS Safety Matrics"
                             },
+                      
                             toolTip: {
                                 shared: true
                             },
@@ -308,8 +373,13 @@ var chart1 = new CanvasJS.Chart("chartContainer1",
                 chart3.render();
             }
         </script>
-        <script type="text/javascript" src="canvasjs.min.js"></script></head>
+        <script type="text/javascript" src="canvasjs.min.js"></script>
+        <script type="text/javascript" src="jquery-2.1.3.min.js"></script></head>
     <body>
+
+    <canvas id="geographic" style="height: 340px; width: 100%;border: 2px solid #a1a1a1;border-radius: 0px; background:url('map_view@2x.png') no-repeat; background-size: 100% 300px;">
+        <button id="button1"></button>
+    </canvas>
         <div id="chartContainer" style="height: 300px; width: 100%;border: 2px solid #a1a1a1;border-radius: 0px;">
         </div>
         
